praktikum2/output/praktikum2bParser.java
// $ANTLR 3.4 /home/slaan/git/cip/praktikum2/praktikum2b.g 2015-05-08 18:50:57

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class praktikum2bParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADDSUBSYM", "ANWEIS", "BEGIN", "BOOLEAN", "COMMENT", "DEKLA", "DEKLARATIONSSYMBOL", "END", "EQUALS", "ESC_SEQ", "FLOAT", "HEX_DIGIT", "ID", "INT", "KOMMA", "MULDIVSYM", "OCTAL_ESC", "PROGRAM", "SEMIKOLON", "STRING", "UNICODE_ESC", "VERGLEICHSZEICHEN", "WERTZUWEISUNG", "WS", "'('", "')'", "'do'", "'else'", "'fi'", "'if'", "'od'", "'println'", "'read'", "'then'", "'while'"
    };

    public static final int EOF=-1;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int ADDSUBSYM=4;
    public static final int ANWEIS=5;
    public static final int BEGIN=6;
    public static final int BOOLEAN=7;
    public static final int COMMENT=8;
    public static final int DEKLA=9;
    public static final int DEKLARATIONSSYMBOL=10;
    public static final int END=11;
    public static final int EQUALS=12;
    public static final int ESC_SEQ=13;
    public static final int FLOAT=14;
    public static final int HEX_DIGIT=15;
    public static final int ID=16;
    public static final int INT=17;
    public static final int KOMMA=18;
    public static final int MULDIVSYM=19;
    public static final int OCTAL_ESC=20;
    public static final int PROGRAM=21;
    public static final int SEMIKOLON=22;
    public static final int STRING=23;
    public static final int UNICODE_ESC=24;
    public static final int VERGLEICHSZEICHEN=25;
    public static final int WERTZUWEISUNG=26;
    public static final int WS=27;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


public static final String[] ruleNames = new String[] {
    "invalidRule", "anweisung", "zuweisung", "arith2", "deklaration", "print2", 
    "dekla", "ifanweisung", "vergleich", "vergleich2", "start", "anweisung_start", 
    "arithExpr", "wertzuweisung", "read", "arith1", "arith3", "whileanweisung", 
    "print"
};

public static final boolean[] decisionCanBacktrack = new boolean[] {
    false, // invalid decision
    false, false, false, false, false, false, false, false, false, false
};

 
    public int ruleLevel = 0;
    public int getRuleLevel() { return ruleLevel; }
    public void incRuleLevel() { ruleLevel++; }
    public void decRuleLevel() { ruleLevel--; }
    public praktikum2bParser(TokenStream input) {
        this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
    }
    public praktikum2bParser(TokenStream input, int port, RecognizerSharedState state) {
        super(input, state);
        DebugEventSocketProxy proxy =
            new DebugEventSocketProxy(this,port,adaptor);
        setDebugListener(proxy);
        setTokenStream(new DebugTokenStream(input,proxy));
        try {
            proxy.handshake();
        }
        catch (IOException ioe) {
            reportError(ioe);
        }
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);
        proxy.setTreeAdaptor(adap);
    }

public praktikum2bParser(TokenStream input, DebugEventListener dbg) {
    super(input, dbg);
     
    TreeAdaptor adap = new CommonTreeAdaptor();
    setTreeAdaptor(adap);


}

protected boolean evalPredicate(boolean result, String predicate) {
    dbg.semanticPredicate(result, predicate);
    return result;
}

protected DebugTreeAdaptor adaptor;
public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = new DebugTreeAdaptor(dbg,adaptor);


}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}

    public String[] getTokenNames() { return praktikum2bParser.tokenNames; }
    public String getGrammarFileName() { return "/home/slaan/git/cip/praktikum2/praktikum2b.g"; }


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "start"
    // /home/slaan/git/cip/praktikum2/praktikum2b.g:10:1: start : PROGRAM ! dekla BEGIN ! anweisung_start END !;
    public final praktikum2bParser.start_return start() throws RecognitionException {
        praktikum2bParser.start_return retval = new praktikum2bParser.start_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token PROGRAM1=null;
        Token BEGIN3=null;
        Token END5=null;
        praktikum2bParser.dekla_return dekla2 =null;

        praktikum2bParser.anweisung_start_return anweisung_start4 =null;


        Object PROGRAM1_tree=null;
        Object BEGIN3_tree=null;
        Object END5_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "start");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(10, 0);

        try {
            // /home/slaan/git/cip/praktikum2/praktikum2b.g:11:2: ( PROGRAM ! dekla BEGIN ! anweisung_start END !)
            dbg.enterAlt(1);

            // /home/slaan/git/cip/praktikum2/praktikum2b.g:11:5: PROGRAM ! dekla BEGIN ! anweisung_start END !
            {
            root_0 = (Object)adaptor.nil();


            dbg.location(11,13);
            PROGRAM1=(Token)match(input,PROGRAM,FOLLOW_PROGRAM_in_start34); 
            dbg.location(12,4);
            pushFollow(FOLLOW_dekla_in_start41);
            dekla2=dekla();

            state._fsp--;

            adaptor.addChild(root_0, dekla2.getTree());
            dbg.location(13,10);
            BEGIN3=(Token)match(input,BEGIN,FOLLOW_BEGIN_in_start46); 
            dbg.location(14,4);
            pushFollow(FOLLOW_anweisung_start_in_start53);
            anweisung_start4=anweisung_start();

            state._fsp--;

            adaptor.addChild(root_0, anweisung_start4.getTree());
            dbg.location(15,8);
            END5=(Token)match(input,END,FOLLOW_END_in_start58); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(15, 8);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "start");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "start"


    public static class dekla_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "dekla"
    // /home/slaan/git/cip/praktikum2/praktikum2b.g:17:1: dekla : ( deklaration )* -> ^( DEKLA ( deklaration )* ) ;
    public final praktikum2bParser.dekla_return dekla() throws RecognitionException {
        praktikum2bParser.dekla_return retval = new praktikum2bParser.dekla_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        praktikum2bParser.deklaration_return deklaration6 =null;


        RewriteRuleSubtreeStream stream_deklaration=new RewriteRuleSubtreeStream(adaptor,"rule deklaration");
        try { dbg.enterRule(getGrammarFileName(), "dekla");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(17, 0);

        try {
            // /home/slaan/git/cip/praktikum2/praktikum2b.g:17:7: ( ( deklaration )* -> ^( DEKLA ( deklaration )* ) )
            dbg.enterAlt(1);

            // /home/slaan/git/cip/praktikum2/praktikum2b.g:17:9: ( deklaration )*
            {
            dbg.location(17,9);
            // /home/slaan/git/cip/praktikum2/praktikum2b.g:17:9: ( deklaration )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=2;
                try { dbg.enterDecision(1, decisionCanBacktrack[1]);

                int LA1_0 = input.LA(1);

                if ( (LA1_0==DEKLARATIONSSYMBOL) ) {
                    alt1=1;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/slaan/git/cip/praktikum2/praktikum2b.g:17:9: deklaration
            	    {
            	    dbg.location(17,9);
            	    pushFollow(FOLLOW_deklaration_in_dekla70);
            	    deklaration6=deklaration();

            	    state._fsp--;

            	    stream_deklaration.add(deklaration6.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}


            // AST REWRITE
            // elements: deklaration
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 17:22: -> ^( DEKLA ( deklaration )* )
            {
                dbg.location(17,25);
                // /home/slaan/git/cip/praktikum2/praktikum2b.g:17:25: ^( DEKLA ( deklaration )* )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(17,27);
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(DEKLA, "DEKLA")
                , root_1);

                dbg.location(17,33);
                // /home/slaan/git/cip/praktikum2/praktikum2b.g:17:33: ( deklaration )*
                while ( stream_deklaration.hasNext() ) {
                    dbg.location(17,33);
                    adaptor.addChild(root_1, stream_deklaration.nextTree());

                }
                stream_deklaration.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(17, 45);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "dekla");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "dekla"


    public static class deklaration_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "deklaration"
    // /home/slaan/git/cip/praktikum2/praktikum2b.g:19:1: deklaration : DEKLARATIONSSYMBOL ID ( KOMMA ID )* SEMIKOLON -> ^( DEKLARATIONSSYMBOL ( ID )* ) ;
    public final praktikum2bParser.deklaration_return deklaration() throws RecognitionException {
        praktikum2bParser.deklaration_return retval = new praktikum2bParser.deklaration_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token DEKLARATIONSSYMBOL7=null;
        Token ID8=null;
        Token KOMMA9=null;
        Token ID10=null;
        Token SEMIKOLON11=null;

        Object DEKLARATIONSSYMBOL7_tree=null;
        Object ID8_tree=null;
        Object KOMMA9_tree=null;
        Object ID10_tree=null;
        Object SEMIKOLON11_tree=null;
        RewriteRuleTokenStream stream_SEMIKOLON=new RewriteRuleTokenStream(adaptor,"token SEMIKOLON");
        RewriteRuleTokenStream stream_KOMMA=new RewriteRuleTokenStream(adaptor,"token KOMMA");
        RewriteRuleTokenStream stream_DEKLARATIONSSYMBOL=new RewriteRuleTokenStream(adaptor,"token DEKLARATIONSSYMBOL");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");

        try { dbg.enterRule(getGrammarFileName(), "deklaration");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(19, 0);

        try {
            // /home/slaan/git/cip/praktikum2/praktikum2b.g:20:2: ( DEKLARATIONSSYMBOL ID ( KOMMA ID )* SEMIKOLON -> ^( DEKLARATIONSSYMBOL ( ID )* ) )
            dbg.enterAlt(1);

            // /home/slaan/git/cip/praktikum2/praktikum2b.g:20:4: DEKLARATIONSSYMBOL ID ( KOMMA ID )* SEMIKOLON
            {
            dbg.location(20,4);
            DEKLARATIONSSYMBOL7=(Token)match(input,DEKLARATIONSSYMBOL,FOLLOW_DEKLARATIONSSYMBOL_in_deklaration93);  
            stream_DEKLARATIONSSYMBOL.add(DEKLARATIONSSYMBOL7);

            dbg.location(20,23);
            ID8=(Token)match(input,ID,FOLLOW_ID_in_deklaration95);  
            stream_ID.add(ID8);

            dbg.location(20,26);
            // /home/slaan/git/cip/praktikum2/praktikum2b.g:20:26: ( KOMMA ID )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2, decisionCanBacktrack[2]);

                int LA2_0 = input.LA(1);

                if ( (LA2_0==KOMMA) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/slaan/git/cip/praktikum2/praktikum2b.g:20:27: KOMMA ID
            	    {
            	    dbg.location(20,27);
            	    KOMMA9=(Token)match(input,KOMMA,FOLLOW_KOMMA_in_deklaration98);  
            	    stream_KOMMA.add(KOMMA9);

            	    dbg.location(20,33);
            	    ID10=(Token)match(input,ID,FOLLOW_ID_in_deklaration100);  
            	    stream_ID.add(ID10);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}

            dbg.location(20,38);
            SEMIKOLON11=(Token)match(input,SEMIKOLON,FOLLOW_SEMIKOLON_in_deklaration104);  
            stream_SEMIKOLON.add(SEMIKOLON11);


            // AST REWRITE
            // elements: ID, DEKLARATIONSSYMBOL
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 20:48: -> ^( DEKLARATIONSSYMBOL ( ID )* )
            {
                dbg.location(20,51);
                // /home/slaan/git/cip/praktikum2/praktikum2b.g:20:51: ^( DEKLARATIONSSYMBOL ( ID )* )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(20,53);
                root_1 = (Object)adaptor.becomeRoot(
                stream_DEKLARATIONSSYMBOL.nextNode()
                , root_1);

                dbg.location(20,72);
                // /home/slaan/git/cip/praktikum2/praktikum2b.g:20:72: ( ID )*
                while ( stream_ID.hasNext() ) {
                    dbg.location(20,72);
                    adaptor.addChild(root_1, 
                    stream_ID.nextNode()
                    );

                }
                stream_ID.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(20, 75);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "deklaration");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "deklaration"


    public static class anweisung_start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "anweisung_start"
    // /home/slaan/git/cip/praktikum2/praktikum2b.g:22:1: anweisung_start : ( anweisung )* -> ^( ANWEIS ( anweisung )* ) ;
    public final praktikum2bParser.anweisung_start_return anweisung_start() throws RecognitionException {
        praktikum2bParser.anweisung_start_return retval = new praktikum2bParser.anweisung_start_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        praktikum2bParser.anweisung_return anweisung12 =null;


        RewriteRuleSubtreeStream stream_anweisung=new RewriteRuleSubtreeStream(adaptor,"rule anweisung");
        try { dbg.enterRule(getGrammarFileName(), "anweisung_start");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(22, 0);

        try {
            // /home/slaan/git/cip/praktikum2/praktikum2b.g:23:2: ( ( anweisung )* -> ^( ANWEIS ( anweisung )* ) )
            dbg.enterAlt(1);

            // /home/slaan/git/cip/praktikum2/praktikum2b.g:23:4: ( anweisung )*
            {
            dbg.location(23,4);
            // /home/slaan/git/cip/praktikum2/praktikum2b.g:23:4: ( anweisung )*
            try { dbg.enterSubRule(3);

            loop3:
            do {
                int alt3=2;
                try { dbg.enterDecision(3, decisionCanBacktrack[3]);

                int LA3_0 = input.LA(1);

                if ( (LA3_0==BOOLEAN||LA3_0==FLOAT||(LA3_0 >= ID && LA3_0 <= INT)||LA3_0==STRING||LA3_0==28||LA3_0==33||(LA3_0 >= 35 && LA3_0 <= 36)||LA3_0==38) ) {
                    alt3=1;
                }


                } finally {dbg.exitDecision(3);}

                switch (alt3) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /home/slaan/git/cip/praktikum2/praktikum2b.g:23:4: anweisung
            	    {
            	    dbg.location(23,4);
            	    pushFollow(FOLLOW_anweisung_in_anweisung_start122);
            	    anweisung12=anweisung();

            	    state._fsp--;

            	    stream_anweisung.add(anweisung12.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);
            } finally {dbg.exitSubRule(3);}


            // AST REWRITE
            // elements: anweisung
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 23:15: -> ^( ANWEIS ( anweisung )* )
            {
                dbg.location(23,18);
                // /home/slaan/git/cip/praktikum2/praktikum2b.g:23:18: ^( ANWEIS ( anweisung )* )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(23,20);
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(ANWEIS, "ANWEIS")
                , root_1);

                dbg.location(23,27);
                // /home/slaan/git/cip/praktikum2/praktikum2b.g:23:27: ( anweisung )*
                while ( stream_anweisung.hasNext() ) {
                    dbg.location(23,27);
                    adaptor.addChild(root_1, stream_anweisung.nextTree());

                }
                stream_anweisung.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(23, 37);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "anweisung_start");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "anweisung_start"


    public static class anweisung_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "anweisung"
    // /home/slaan/git/cip/praktikum2/praktikum2b.g:25:1: anweisung : ( wertzuweisung | arith1 | ifanweisung | whileanweisung | read | print | vergleich ) SEMIKOLON !;
    public final praktikum2bParser.anweisung_return anweisung() throws RecognitionException {
        praktikum2bParser.anweisung_return retval = new praktikum2bParser.anweisung_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token SEMIKOLON20=null;
        praktikum2bParser.wertzuweisung_return wertzuweisung13 =null;

        praktikum2bParser.arith1_return arith114 =null;

        praktikum2bParser.ifanweisung_return ifanweisung15 =null;

        praktikum2bParser.whileanweisung_return whileanweisung16 =null;

        praktikum2bParser.read_return read17 =null;

        praktikum2bParser.print_return print18 =null;

        praktikum2bParser.vergleich_return vergleich19 =null;


        Object SEMIKOLON20_tree=null;

        try { dbg.enterRule(getGrammarFileName(), "anweisung");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(25, 0);

        try {
            // /home/slaan/git/cip/praktikum2/praktikum2b.g:26:2: ( ( wertzuweisung | arith1 | ifanweisung | whileanweisung | read | print | vergleich ) SEMIKOLON !)
            dbg.enterAlt(1);

            // /home/slaan/git/cip/praktikum2/praktikum2b.g:26:4: ( wertzuweisung | arith1 | ifanweisung | whileanweisung | read | print | vergleich ) SEMIKOLON !
            {
            root_0 = (Object)adaptor.nil();


            dbg.location(26,4);
            // /home/slaan/git/cip/praktikum2/praktikum2b.g:26:4: ( wertzuweisung | arith1 | ifanweisung | whileanweisung | read | print | vergleich )
            int alt4=7;
            try { dbg.enterSubRule(4);
            try { dbg.enterDecision(4, decisionCanBacktrack[4]);

            switch ( input.LA(1) ) {
            case ID:
                {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==WERTZUWEISUNG) ) {
                    alt4=1;
                }
                else if ( (LA4_1==ADDSUBSYM||LA4_1==MULDIVSYM||LA4_1==SEMIKOLON) ) {
                    alt4=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    dbg.recognitionException(nvae);
                    throw nvae;

                }
                }
                break;
            case INT:
                {
                int LA4_2 = input.LA(2);

                if ( (LA4_2==ADDSUBSYM||LA4_2==MULDIVSYM||LA4_2==SEMIKOLON) ) {
                    alt4=2;
                }
                else if ( (LA4_2==VERGLEICHSZEICHEN) ) {
                    alt4=7;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 2, input);

                    dbg.recognitionException(nvae);
                    throw nvae;

                }
                }
                break;
            case FLOAT:
                {
                int LA4_3 = input.LA(2);

                if ( (LA4_3==ADDSUBSYM||LA4_3==MULDIVSYM||LA4_3==SEMIKOLON) ) {
                    alt4=2;
                }
                else if ( (LA4_3==VERGLEICHSZEICHEN) ) {
                    alt4=7;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 3, input);

                    dbg.recognitionException(nvae);
                    throw nvae;

                }
                }
                break;
            case 28:
                {
                alt4=2;
                }
                break;
            case 33:
                {
                alt4=3;
                }
                break;
            case 38:
                {
                alt4=4;
                }
                break;
            case 36:
                {
                alt4=5;
                }
                break;
            case 35:
                {
                alt4=6;
                }
                break;
            case BOOLEAN:
            case STRING:
                {
                alt4=7;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                dbg.recognitionException(nvae);
                throw nvae;

            }

            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // /home/slaan/git/cip/praktikum2/praktikum2b.g:26:5: wertzuweisung
                    {
                    dbg.location(26,5);
                    pushFollow(FOLLOW_wertzuweisung_in_anweisung144);
                    wertzuweisung13=wertzuweisung();

                    state._fsp--;

                    adaptor.addChild(root_0, wertzuweisung13.getTree());

                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /home/slaan/git/cip/praktikum2/praktikum2b.g:26:19: arith1
                    {
                    dbg.location(26,19);
                    pushFollow(FOLLOW_arith1_in_anweisung146);
                    arith114=arith1();

                    state._fsp--;

                    adaptor.addChild(root_0, arith114.getTree());

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /home/slaan/git/cip/praktikum2/praktikum2b.g:26:26: ifanweisung
                    {
                    dbg.location(26,26);
                    pushFollow(FOLLOW_ifanweisung_in_anweisung148);
                    ifanweisung15=ifanweisung();

                    state._fsp--;

                    adaptor.addChild(root_0, ifanweisung15.getTree());

                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // /home/slaan/git/cip/praktikum2/praktikum2b.g:26:38: whileanweisung
                    {
                    dbg.location(26,38);
                    pushFollow(FOLLOW_whileanweisung_in_anweisung150);
                    whileanweisung16=whileanweisung();

                    state._fsp--;

                    adaptor.addChild(root_0, whileanweisung16.getTree());

                    }
                    break;
                case 5 :
                    dbg.enterAlt(5);

                    // /home/slaan/git/cip/praktikum2/praktikum2b.g:26:53: read
                    {
                    dbg.location(26,53);
                    pushFollow(FOLLOW_read_in_anweisung152);
                    read17=read();

                    state._fsp--;

                    adaptor.addChild(root_0, read17.getTree());

                    }
                    break;
                case 6 :
                    dbg.enterAlt(6);

                    // /home/slaan/git/cip/praktikum2/praktikum2b.g:26:58: print
                    {
                    dbg.location(26,58);
                    pushFollow(FOLLOW_print_in_anweisung154);
                    print18=print();

                    state._fsp--;

                    adaptor.addChild(root_0, print18.getTree());

                    }
                    break;
                case 7 :
                    dbg.enterAlt(7);

                    // /home/slaan/git/cip/praktikum2/praktikum2b.g:26:64: vergleich
                    {
                    dbg.location(26,64);
                    pushFollow(FOLLOW_vergleich_in_anweisung156);
                    vergleich19=vergleich();

                    state._fsp--;

                    adaptor.addChild(root_0, vergleich19.getTree());

                    }
                    break;

            }
            } finally {dbg.exitSubRule(4);}

            dbg.location(26,85);
            SEMIKOLON20=(Token)match(input,SEMIKOLON,FOLLOW_SEMIKOLON_in_anweisung159); 

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        dbg.location(26, 85);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "anweisung");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "anweisung"


    public static class wertzuweisung_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "wertzuweisung"
    // /home/slaan/git/cip/praktikum2/praktikum2b.g:28:1: wertzuweisung : ID WERTZUWEISUNG zuweisung -> ^( WERTZUWEISUNG ID zuweisung ) ;
    public final praktikum2bParser.wertzuweisung_return wertzuweisung() throws RecognitionException {
        praktikum2bParser.wertzuweisung_return retval = new praktikum2bParser.wertzuweisung_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ID21=null;
        Token WERTZUWEISUNG22=null;
        praktikum2bParser.zuweisung_return zuweisung23 =null;

